--- a/app/client/index.html
+++ b/app/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>家庭持仓估值 v1.0</title>
+    <title>持仓估值 v1.0</title>
   </head>
   <body style="background-color: #000000;">
     <div id="app"></div>
