--- a/app/client/index.html
+++ b/app/client/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta content="yes" name="apple-touch-fullscreen">
     <title>持仓估值 v1.0</title>
+    <!-- <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script> -->
+    <script src="static/flexible_css.js"></script>
+    <script src="static/flexible.js"></script>
   </head>
   <body style="background-color: #000000;">
     <div id="app"></div>
